fix image display

--- a/back.html
+++ b/back.html
@@ -64,7 +64,7 @@
     }
 
     function getOptionObjs() {
-      var optionArray = "{{options}}".trim().split("||")
+      var optionArray = '{{options}}'.trim().split("||")
       var optionObjs = []
       for (var i in optionArray) {
         optionObjs.push({
