--- a/front.html
+++ b/front.html
@@ -72,7 +72,7 @@
   }
 
   function getOptionObjs(randomOption) {
-    var optionArray = "{{options}}".trim().split("||")
+    var optionArray = '{{options}}'.trim().split("||")
     var optionObjs = []
     for (var i in optionArray) {
       optionObjs.push({
